Bug 322003 - Menu button spawns menu in wrong place
Summary: Menu button spawns menu in wrong place
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.3.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 3.0
Assignee: Andrea Diamantini
URL:
Keywords:
: 323786 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-05 17:56 UTC by David Izquierdo
Modified: 2013-08-20 16:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Izquierdo 2013-07-05 17:56:40 UTC
When the Menu button is moved to the left of the location bar, and is clicked the menu spawns at the right, as if the button was in its default position

Reproducible: Always

Steps to Reproduce:
1. Right click toolbar, select "Configure Toolbar"
2. In the right pane, move "Tools" to the topmost position
3. Save changes.
4. Click the Tools button
Actual Results:  
The tools menu is displayed at the rightmost position, as if the button hadn't been moved.

Expected Results:  
The menu is displayed in the right, below the ACTUAL button position
Comment 1 Andrea Diamantini 2013-08-16 23:13:12 UTC
Git commit 6c8cf8854f957cdf2520c9d199fee80c8d09b901 by Andrea Diamantini.
Committed on 16/08/2013 at 23:13.
Pushed by adjam into branch 'master'.

span rekonq menu in the right place

M  +7    -2    src/webwindow/rekonqmenu.cpp

http://commits.kde.org/rekonq/6c8cf8854f957cdf2520c9d199fee80c8d09b901
Comment 2 Christoph Feck 2013-08-20 16:13:41 UTC
*** Bug 323786 has been marked as a duplicate of this bug. ***