span rekonq menu in the right place

BUG: 322003